<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".controller.SettingActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_font_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fontsize" />

        <RadioGroup
            android:id="@+id/font_radio_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radioBtn_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/radio_btn_small" />

            <RadioButton
                android:id="@+id/radioBtn_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/radio_btn_medium" />

            <RadioButton
                android:id="@+id/radioBtn_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/radio_btn_large" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_hide"
            android:layout_gravity="center"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/check_false"/>

        <TextView
            android:id="@+id/txt_false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_false_text"
            android:textStyle="bold" />-->

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/check_true"/>

        <TextView
            android:id="@+id/txt_true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txt_true"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/check_perv"/>

        <TextView
            android:id="@+id/txt_perv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/perv"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/check_next"/>

        <TextView
            android:id="@+id/txt_next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/last"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/check_first"/>

        <TextView
            android:id="@+id/txt_first"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="اول"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/check_last"/>

        <TextView
            android:id="@+id/txt_last"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/changebackground"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/txt_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="تغییر رنگ پس زمینه :"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <RadioGroup
            android:id="@+id/color_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_Btn_Green"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/back_green" />
            <RadioButton
                android:id="@+id/radio_Btn_Blue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bach_blue" />
            <RadioButton
                android:id="@+id/radio_Btn_Red"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/back_red" />
        </RadioGroup>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        >

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            />

        <Button
            android:id="@+id/btn_discare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancle" />
    </LinearLayout>


</LinearLayout>