<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".controller.QuizActivity">

    <LinearLayout

        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/score_text"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal|top"
            android:textSize="24sp">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/question_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text=""
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                />

            <LinearLayout
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/false_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:background="@drawable/ic_close"
                    android:text="@string/btn_false_text"
                    android:textSize="24sp"
                    android:textStyle="bold">

                </ImageButton>

                <ImageButton
                    android:id="@+id/true_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/ic_check"
                    android:textSize="18sp"
                    android:textStyle="bold">

                </ImageButton>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_double_prev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_double_left"
                    android:textSize="24sp"
                    android:textStyle="bold">

                </ImageButton>

                <ImageButton
                    android:id="@+id/btn_prev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"

                    android:src="@drawable/ic_left"
                    android:textSize="24sp"
                    android:textStyle="bold">

                </ImageButton>

                <ImageButton
                    android:id="@+id/btn_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_right"
                    android:textSize="24sp"
                    android:textStyle="bold">

                </ImageButton>

                <ImageButton
                    android:id="@+id/btn_double_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_double_right"
                    android:textSize="24sp"
                    android:textStyle="bold">

                </ImageButton>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/cheat_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:paddingRight="5dp"
                    android:text="تقلب"></Button>

                <Button
                    android:id="@+id/setting_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:text="@string/setting_btn" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/score_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_game_over"
            android:text="@string/game_over"
            android:textSize="36sp"
            android:textColor="@color/purple"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/score_final"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/gold">

        </TextView>

        <ImageButton
            android:id="@+id/reset_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_reset">

        </ImageButton>



    </LinearLayout>
</LinearLayout>